--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "mongodb": "^6.2.0",
     "next": "14.0.2",
+    "next-cloudinary": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "safe-decode-uri-component": "1.2.2-native",
     "sharp": "^0.32.6",
+    "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
