--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.1.1",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.5",
-    "mongodb": "^6.2.0",
+    "framer-motion": "^10.16.16",
+    "mongodb": "^6.3.0",
     "next": "14.0.2",
-    "next-cloudinary": "^5.13.0",
+    "next-cloudinary": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "safe-decode-uri-component": "1.2.2-native",
     "sharp": "^0.32.6",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.2",
-    "postcss": "^8.4.31",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "postcss": "^8.4.32",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
